--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -2,6 +2,15 @@
   
 }
 
+.ResultsAndPlayList{
+  
+  display: grid;
+  grid-template-columns: 70% 30%;
+  column-gap: 40px;
+  border: 1px solid black;
+  max-width: 1280px;
+  min-height: 1000px;
+}
 
 
 h1{
