--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -5,14 +5,21 @@
 .ResultsAndPlayList{
   
   display: grid;
-  grid-template-columns: 70% 30%;
-  column-gap: 40px;
-  border: 1px solid black;
+  grid-template-columns: 60% 5% 35%;
+  
+  
   max-width: 1280px;
   min-height: 1000px;
+  width:100%;
 }
 
 
-h1{
-  color:green;
-};
+
+
+.Center{
+  display:flex;
+  justify-content:center;
+  
+ 
+  
+}
