--- a/src/Styles/SearchBar.css
+++ b/src/Styles/SearchBar.css
@@ -1,11 +1,11 @@
 .SearchBar{
     max-width:1280px;
     min-height: 320px;
-    background-color:red;
+    
     margin: 20px 0;
     justify-content:center;
     align-items:center;
-    
+    width:100%;
   
 
 }   
@@ -18,5 +18,5 @@
     
 }
 .grid div{
-    border: 1px solid blue;
+    
 }
