--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -5,7 +5,7 @@
 .ResultsAndPlayList{
   
   display: grid;
-  grid-template-columns: 60% 5% 35%;
+  grid-template-columns: 60% 25px 1fr;
   
   
   max-width: 1280px;
