--- a/src/Styles/Playlist.css
+++ b/src/Styles/Playlist.css
@@ -1,3 +1,24 @@
 .Playlist{
     
+    justify-content:center;
+    align-items:center;
+}
+
+.header{
+    display:flex;
+    justify-content:center;
+}
+
+.input{
+    display:grid;
+    grid-template-rows: 50% 50%;
+    justify-content:center;
+    text-align:center;
+}
+.center{
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    
+    margin:auto;
 }
