--- a/src/Styles/Skin.css
+++ b/src/Styles/Skin.css
@@ -12,6 +12,29 @@
     color: var(--text);
     
 }
+.Skin .button {
+  background-color: var(--btn);
+  border: none;
+  color: black;
+  padding: 8px 60px;
+  text-align: center;
+  font-size: 30px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: var(--curve);
+ 
+
+}
+.Skin .button:hover{
+    opacity:1;
+    border:1px solid black;
+}
+
+
+
 
 .Skin2{
     background-color: var(--btn);
@@ -19,6 +42,33 @@
     
 }
 
+.Skin2 .button {
+  background-color: var(--webBackround);
+  border: none;
+  color: white;
+  padding: 8px 60px;
+  text-align: center;
+  font-size: 30px;
+  opacity: 0.6;
+  transition: 0.3s;
+  display: inline-block;
+  text-decoration: none;
+  cursor: pointer;
+  border-radius: var(--curve);
+
+}
+.Skin2 .button:hover{
+    opacity:1;
+    border:1px solid black;
+}
+
 .Curve {
     border-radius: var(--curve);
+}
+
+input[type=text] {
+  width: 100%;
+  padding: 12px;
+  margin: 5px 0;
+  box-sizing: border-box;
 }
